[package]
name = "logging"
version = "0.1.0"
authors = ["Conor Patrick <conor@solokeys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "0.1.10"
cortex-m-funnel = { git = "https://github.com/conorpp/cortex-m-funnel"}
cortex-m-semihosting = { git = "https://github.com/rust-embedded/cortex-m-semihosting"}
nb = "1"
ufmt = {version =  "0.1.0"}

[features]
default = ["all"]
std = []

# Enable all logs
all=[]

# Disable all logs
none=[]

# Enable individual log levels.  These enable/disable for all crates.
info=[]
debug=[]
error=[]
warn=[]

# For testing
log-all=['std']
log-none=['std']
log-info=['std']
log-debug=['std']
log-warn=['std']
log-error=['std']

[patch.crates-io]
ufmt = { git = "https://github.com/nickray/ufmt", branch = "nickray-derive-empty-enums" }
ufmt-macros = { git = "https://github.com/nickray/ufmt", branch = "nickray-derive-empty-enums" }