[package]
name = "lpc55-hal"
version = "0.3.0"
edition = "2018"
description   = "Hardware Abstraction Layer (HAL) for the NXP LPC55S6x ARM Cortex-33 microcontrollers"
repository = "https://github.com/lpc55/lpc55-hal"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/lpc55-hal"
keywords = ["no-std", "cortex-m", "nxp", "lpc", "embedded-hal-impl"]
categories = ["embedded", "no-std"]
authors = ["Nicolas Stalder <n@stalder.io>", "Conor Patrick <conorpp94@gmail.com>", "Hanno Braun <hanno@braun-robotics.com>"]
build = "build.rs"

[package.metadata.docs.rs]
targets = []

[dependencies]
block-buffer = "0.9"
cipher = "0.3"
cortex-m = "0.7"
digest = "0.9"
embedded-hal = { version = "0.2", features = ["unproven"] }
embedded-time = "0.12"
generic-array = "0.14.2"
lpc55-pac = "0.4"
nb = "1"
rand_core = "0.6"
usb-device = "0.2"
vcell = "0.1"
void = { version = "1", default-features = false }

# optional dependencies
# cortex-m-rtic = { version = "0.5", optional = true }
lpc55-rtic = { version = "0.5.7", optional = true }
littlefs2 = { version = "0.3.1", optional = true }

[dev-dependencies]
aes = "0.7"
cortex-m-rt = "0.6"
# cortex-m-rtic = "0.5"
lpc55-rtic = "0.5"
cortex-m-semihosting = "0.3"
heapless = "0.7"
panic-halt  = "0.2"
panic-semihosting = { version = "0.5", features = ["jlink-quirks"] }
rtt-target = { version = "0.3", features = ["cortex-m"] }
sha2 = { version = "0.9", default-features = false }
ssd1306 = "0.3"
sha-1 = { version = "0.9", default-features = false }
usbd-serial = "0.1"

[features]
default = ["rt"]
littlefs = ["littlefs2"]
rt = ["lpc55-pac/rt"]
rtic-peripherals = ["lpc55-rtic"]
# no longer a HAL feature, just for the usb examples
highspeed-usb-example = []

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z"

