[package]
name = "management-app"
version = "0.1.0"
authors = ["Conor Patrick <conor@solokeys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apdu-dispatch = {path = "../apdu-dispatch"}
iso7816 = { path = "../iso7816" }
ctaphid-dispatch = {path = "../ctaphid-dispatch"}
trussed = { git = "https://github.com/trussed-dev/trussed", branch = "main" }
