[package]
name = "ndef-app"
version = "0.1.0"
authors = ["Conor Patrick <conor@solokeys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.6"
heapless-bytes = "0.2.0"

apdu-dispatch = { git = "https://github.com/solokeys/apdu-dispatch", branch = "main" }
iso7816 = { git = "https://github.com/ycrypto/iso7816", branch = "main" }
