[package]
name = "nfc-device"
version = "0.0.1"
authors = ["Conor Patrick <conor@solokeys.com>"]
edition = "2018"

[dependencies]
delog = "0.1.0"
heapless = "0.6"
heapless-bytes = "0.2.0"
nb = "1"

apdu-dispatch = { path = "../apdu-dispatch" }
iso7816 = {path = "../iso7816"}
interchange = "0.2.0"

[features]
default = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
