[package]
name = "nfc-device"
version = "0.0.1"
authors = ["Conor Patrick <conor@solokeys.com>"]
edition = "2018"

[dependencies]
delog = "0.1.0"
embedded-time = "0.12"
heapless = "0.7"
nb = "1"

apdu-dispatch = { git = "https://github.com/solokeys/apdu-dispatch", branch = "main" }
iso7816 = { git = "https://github.com/ycrypto/iso7816", branch = "main" }
interchange = "0.2.1"

[features]
default = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
