[package]
name = "piv-authenticator"
version = "0.0.0-unreleased"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apdu-dispatch = { path = "../apdu-dispatch", optional = true }
delog = "0.1.0-alpha.3"
heapless = "0.6"
heapless-bytes = "0.1.1"
hex-literal = "0.3"
interchange = "0.1"
iso7816 = { path = "../iso7816" }
serde = { version = "1", default-features = false }
# simple-tlv = { version = "0.1", features = ["derive"] }
flexiber = { path = "../../../flexiber", features = ["derive"] }
trussed = { git = "ssh://git@github.com/trussed-dev/trussed.git", branch = "main" }
# trussed = { path = "../../../trussed" }
untrusted = "0.7"

[dev-dependencies]
littlefs2 = "0.1.0"
rand_core = { version = "0.5.1", features = ["getrandom"] }

[features]
default = []
applet = ["apdu-dispatch"]

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
