[package]
name = "piv-authenticator"
version = "0.0.0-unreleased"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apdu-dispatch = { git = "https://github.com/solokeys/apdu-dispatch", branch = "main", optional = true }
delog = "0.1.0"
# flexiber = { path = "/home/nicolas/projects/flexiber", features = ["derive", "heapless"] }
flexiber = { git = "https://github.com/nickray/flexiber", branch = "main", features = ["derive", "heapless"] }
heapless = "0.6"
heapless-bytes = "0.2"
hex-literal = "0.3"
interchange = "0.2.0"
iso7816 = { git = "https://github.com/ycrypto/iso7816", branch = "main" }
serde = { version = "1", default-features = false }
trussed = { git = "https://github.com/trussed-dev/trussed", branch = "main" }
# trussed = { path = "../../../trussed" }
untrusted = "0.7"

[dev-dependencies]
littlefs2 = "0.2.1"
rand_core = { version = "0.5.1", features = ["getrandom"] }

[features]
default = ["applet"]
applet = ["apdu-dispatch"]
strict-pin = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
