[package]
name = "piv-card"
version = "0.0.0-unreleased"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.5.5"
interchange = { path = "../interchange" }
iso7816 = { path = "../iso7816" }
serde = { version = "1.0", default-features = false }
trussed = { path = "../trussed", package = "trussed" }
apdu-dispatch = { path = "../apdu-dispatch" }
delog = "0.1.0-alpha.2"
untrusted = "0.7.1"

[features]
default = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []

[patch.crates-io]
# ufmt = { path = "../../ufmt" }
ufmt = { git = "https://github.com/nickray/ufmt", branch = "nickray-derive-empty-enums" }
ufmt-macros = { git = "https://github.com/nickray/ufmt", branch = "nickray-derive-empty-enums" }
# ufmt-macros = { git = "https://github.com/nickray/ufmt/macros", branch = "nickray-derive-empty-enums" }
# lpc55s6x-pac = { path = "../../lpc55-pacs" }
heapless = { git = "https://github.com/nickray/heapless", branch = "nickray-udebug" }
