[package]
name = "piv-card"
version = "0.0.0-unreleased"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apdu-dispatch = { path = "../apdu-dispatch" }
delog = "0.1.0-alpha.2"
heapless = "0.5.5"
interchange = { path = "../interchange" }
iso7816 = { path = "../iso7816" }
serde = { version = "1.0", default-features = false }
trussed = { path = "../trussed", package = "trussed" }
untrusted = "0.7.1"

[features]
default = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []

[patch.crates-io]
heapless = { git = "https://github.com/nickray/heapless", branch = "nickray-udebug" }
